# tin

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build-echo.sh
cmake/: tinConfig.cmake.in
docs/: api-design-lifecycle.md  api-design-review.md  code-review-2026.md  code-review-design-2026.md  go1.15-runtime-upgrade-features.md  go1.15-runtime-upgrade-plan.md  implementation-plan-2026.md  p3-1-p3-2-proposal.md  per-p-timer-design.md  spawn-callchain-analysis.md
examples/: CMakeLists.txt
examples/echo/: CMakeLists.txt  echo.cc
examples/simple/: CMakeLists.txt  simple.cc
include/tin/: config.h  error.h  result.h  runtime.h  status.h  time.h  tin.h
include/tin/bufio/: buffered_reader.h  bufio.h
include/tin/communication/: chan.h
include/tin/config/: config.h  default.h
include/tin/error/: error.h  error_inl.h
include/tin/io/: io.h  io_buffer.h
include/tin/net/: address_family.h  dialer.h  ip_address.h  ip_endpoint.h  listener.h  resolve.h  tcp.h  tcp_conn.h
include/tin/sync/: atomic.h  atomic_flag.h  cond.h  mutex.h  rwmutex.h  wait_group.h
include/tin/time/: time.h
include/tin/util/: unique_id.h
tests/: CMakeLists.txt  atomic_test.cc  config_test.cc  ip_address_test.cc  mutex_test.cc  status_test.cc  test.h  test_main.cc
tin/: all.h  config.h  error.h  result.h  runtime.h  status.cc  time.h  tin.cc  tin.h
tin/bufio/: buffered_reader.cc  buffered_reader.h  bufio.cc  bufio.h
tin/communication/: chan.h  queue.h
tin/config/: config.cc  config.h  default.h
tin/error/: error.h  error_inl.h  error_posix.cc  error_windows.cc
tin/io/: io.cc  io.h  io_buffer.cc  io_buffer.h  ioutil.cc  ioutil.h
tin/net/: address_family.cc  address_family.h  address_list.cc  address_list.h  dialer.cc  dialer.h  fd_mutex.cc  fd_mutex.h  inet.cc  inet.h  ip_address.cc  ip_address.h  ip_endpoint.cc  ip_endpoint.h  listener.cc  listener.h  listener_impl.h  net.cc  net.h  netfd.h  netfd_common.cc  netfd_common.h  netfd_posix.cc  netfd_posix.h  netfd_windows.cc  netfd_windows.h  poll_desc.cc  poll_desc.h  resolve.cc  resolve.h  sockaddr_storage.cc  sockaddr_storage.h  sys_addrinfo.h  sys_socket.h  tcp.h  tcp_conn.cc  tcp_conn.h  tcp_conn_impl.h  winsock_util.cc  winsock_util.h
tin/platform/: platform.h  platform_posix.cc  platform_posix.h  platform_win.cc  platform_win.h
tin/runtime/: coroutine.cc  coroutine.h  env.cc  env.h  greenlet.cc  greenlet.h  guintptr.h  m.cc  m.h  os_posix.cc  os_win.cc  p.cc  p.h  posix_util.cc  posix_util.h  raw_mutex.h  raw_mutex_sema.cc  runtime.cc  runtime.h  scheduler.cc  scheduler.h  semaphore.cc  semaphore.h  spawn.h  spin.cc  spin.h  sysmon.cc  sysmon.h  threadpoll.cc  threadpoll.h  unlock.cc  unlock.h  util.cc  util.h
tin/runtime/net/: netpoll.cc  netpoll.h  netpoll_epoll.cc  netpoll_kqueue.cc  netpoll_windows.cc  poll_descriptor.cc  poll_descriptor.h  pollops.cc  pollops.h
tin/runtime/stack/: fixedsize_stack.cc  fixedsize_stack.h  protected_fixedsize_stack.h  protected_fixedsize_stack_posix.cc  protected_fixedsize_stack_win.cc  stack.cc  stack.h
tin/runtime/timer/: timer_queue.cc  timer_queue.h
tin/sync/: atomic.h  atomic_flag.h  cond.cc  cond.h  mutex.cc  mutex.h  rwmutex.cc  rwmutex.h  wait_group.cc  wait_group.h
tin/time/: time.cc  time.h
tin/util/: unique_id.cc  unique_id.h
